--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "react-skeleton",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rnrh.github.io/teachers-lounge-soundboard",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
