--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-skeleton",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rnrh.github.io/teachers-lounge-soundboard",
+  "homepage": "https://rnrh.github.io/teachers-lounge",
   "dependencies": {
     "gh-pages": "^2.1.1",
     "react": "^16.7.0",
