--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://rnrh.github.io/teachers-lounge",
   "dependencies": {
+    "chroma-js": "^2.0.6",
     "gh-pages": "^2.1.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
