extract audio player to be single stateful component

--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "homepage": "https://rnrh.github.io/teachers-lounge",
   "dependencies": {
-    "chroma-js": "^2.0.6",
     "gh-pages": "^2.1.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3",
-    "react-simple-audio-player": "^2.0.0"
+    "react-media-player": "^0.7.7",
+    "react-scripts": "2.1.3"
   },
   "scripts": {
     "predeploy": "npm run build",
